fix(css): corrige z-index da sec de autoridade sobrepondo as imagens no mobile

--- a/style.css
+++ b/style.css
@@ -912,7 +912,7 @@ body {
     height: 250px;
     bottom: 20px;
     right: 0;
-    z-index: 1;
+    z-index: 3;
     border-color: rgba(79, 70, 229, 0.3);
 }
 
